2010-04-21  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Another attempt to fix NRWT for chromium.

        REGRESSION(57531): the commit-queue still hates Tor Arne Vestbø
        https://bugs.webkit.org/show_bug.cgi?id=37765

        * Scripts/webkitpy/layout_tests/port/base.py:
         - wdiff_text was returning a byte array instead of a
           unicode string.  The simple fix was to just decode
           the result.  However, seeing so much duplicated code
           with Executive made me cry, so I re-wrote the function
           to be more like pretty_patch_text and use run_command
           (which already knows how to handle unicode).

2010-04-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Windows tests buildbots are too slow to be core builders
        https://bugs.webkit.org/show_bug.cgi?id=37970

        It's 10:45.  The Windows test bots are still hours behind.  They're too
        slow to be core builders.  When they get fast, we can add them back.

        * Scripts/webkitpy/common/net/buildbot.py:
        * Scripts/webkitpy/common/net/buildbot_unittest.py:

2010-04-21  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Attempt one more time to fix NRWT for chromium.

        REGRESSION(57531): the commit-queue still hates Tor Arne Vestbø
        https://bugs.webkit.org/show_bug.cgi?id=37765

        I'm debugging in the blind because I don't have a chromium
        build on this laptop.

        * Scripts/webkitpy/layout_tests/port/chromium.py:
         - Apply the previous fix to a second caller.

2010-04-21  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Attempt one more time to fix NRWT for chromium.

        REGRESSION(57531): the commit-queue still hates Tor Arne Vestbø
        https://bugs.webkit.org/show_bug.cgi?id=37765

        * Scripts/webkitpy/layout_tests/port/chromium.py:
         - Fix handling of test_shell output so that we always
           decode it as utf-8.