@@ -1,5 +1,15 @@
 2010-04-21  Eric Seidel  <eric@webkit.org>
 
+        Unreviewed.  Fix typo in my previous fix attempt.
+
+        REGRESSION(57531): the commit-queue still hates Tor Arne Vestbø
+        https://bugs.webkit.org/show_bug.cgi?id=37765
+
+        * Scripts/webkitpy/layout_tests/port/base.py:
+         - Add self. to class variable access.
+
+2010-04-21  Eric Seidel  <eric@webkit.org>
+
         Unreviewed.  Another attempt to fix NRWT for chromium.
 
         REGRESSION(57531): the commit-queue still hates Tor Arne Vestbø
